# clean-architecture-study

./: .pylintrc  main.py  pyproject.toml
init/: schema.sql
src/entities/: user_entity.py
src/repositories/: users_repository.py
src/schemas/: __init__.py  users_input_schema.py
src/settings/db/: __init__.py  connection.py
tests/repositories/: test_users_repository.py
tests/settings/db/: test_connection.py
